--- a/bere-client/src/App.css
+++ b/bere-client/src/App.css
@@ -13,6 +13,12 @@
   }
 }
 
+.nav-brand {
+  background-color: red;
+  padding: 20px 20px;
+  border-radius: 100%;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
